# code-snapshot

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  README.md  SECURITY.md  pyproject.toml  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: python-publish-test.yml  python-publish.yml
code_snapshot/: __init__.py  code_snapshot.py  models.py
