# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "code-snapshot"
version = "0.1.8"
description = "A tool to generate and save code snapshots"
readme = "README.md"
authors = [{ name = "Ainomic Technology", email = "contact@ainomic.in" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: GNU General Public License (GPL)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
]
keywords = ["snapshot", "screenshot", "code-snapshot", "code-screenshot"]
requires-python = ">=3.8"
dependencies=[
    "requests >= 2.5.4.1, < 2.6",
    "certifi",
]

[project.optional-dependencies]
dev = ["black", "bumpver", "isort", "pip-tools", "pytest"]

[project.urls]
Homepage = "https://github.com/ainomic/code-snapshot"

[tool.bumpver]
current_version = "0.1.8"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"',
]
"code_snapshot/__init__.py" = [
    "{version}",
]
